Hive Change Log

Trunk -  Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-1790. Support HAVING clause in Hive (Vaibhav Aggarwal via cws)

    HIVE-1304. Add function row_sequence in contrib (John Sichi via namit)

    HIVE-1405. Add ability to run an initialization script by 'hive -i <fileName>' (John Sichi via namit)

    HIVE-1387. Add PERCENTILE_APPROX which works with double data type
    (Mayank Lahiri via jvs)

    HIVE-1438. SENTENCES() UDF for natural language tokenization
    (Mayank Lahiri via jvs)

    HIVE-1481. ngrams() UDAF for estimating top-k n-gram frequencies
    (Mayank Lahiri via jvs)

    HIVE-1408. add option to let hive automatically run in local mode based on
    tunable heuristics
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1126. Missiong some Jdbc functionality like getTables
    getColumns and HiveResultSet.get* methods based on column name.
    (Bennie Schut via jvs)

    HIVE-417. Implement Indexing in Hive
    (He Yongqiang via jvs)

    HIVE-1414. Automatically invoke .hiverc init script
    (Edward Capriolo via jvs)

    HIVE-1413. Ability to take a table offline
    (Siying Dong via namit)

    HIVE-1514. API to change fileformat and location of a partition
    (He Yongqiang via namit)

    HIVE-1528. JSON UDTF function
    (Ning Zhang via jvs)

    HIVE-1529. Add ANSI SQL covariance aggregate functions: covar_pop
    and covar_samp
    (Pierre Huyn via jvs)

    HIVE-1518. context_ngrams() UDAF for estimating top-k contextual
    n-grams
    (Mayank Lahiri via jvs)

    HIVE-1549. Add ANSI SQL correlation function CORR(X,Y).
    (Pierre Huyn via jvs)

    HIVE-1307. More generic and efficient merge
    (Ning Zhang via namit)

    HIVE-1578. Add conf. variable for displaying link to task
    with most failures (Paul Yang via namit)

    HIVE-1293. Concurrency Model for Hive
    (Namit Jain via jvs)

    HIVE-675. Add database/schema support for Hive
    (Carl Steinbach via namit)
